--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "moment": "^2.29.4",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3"
   }
